y.output
   0  $accept : prog $end

   1  $$1 :

   2  prog : $$1 dList mainF

   3  $$2 :

   4  $$3 :

   5  mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 '}'

   6  dList : decl dList
   7        | sDecl dList
   8        |

   9  decl : type ID ';'
  10       | type ID '[' NUM ']' ';'
  11       | STRUCT ID ID ';'

  12  $$4 :

  13  sDecl : STRUCT ID '{' $$4 sFields '}' ';'

  14  sFields : sFields INT ID ';'
  15          |

  16  type : INT
  17       | FLOAT
  18       | BOOL

  19  lcmd : lcmd cmd
  20       |

  21  cmd : exp ';'
  22      | '{' lcmd '}'
  23      | WRITE '(' LIT ')' ';'

  24  $$5 :

  25  cmd : WRITE '(' LIT $$5 ',' exp ')' ';'
  26      | READ '(' ID ')' ';'

  27  $$6 :

  28  $$7 :

  29  cmd : WHILE $$6 '(' exp ')' $$7 cmd

  30  $$8 :

  31  cmd : DO $$8 cmd WHILE '(' exp ')' ';'

  32  $$9 :

  33  $$10 :

  34  cmd : FOR '(' optInit ';' optCond ';' optIncr ')' $$9 cmd $$10
  35      | BREAK ';'
  36      | CONTINUE ';'

  37  $$11 :

  38  cmd : IF '(' exp $$11 ')' cmd restoIf

  39  $$12 :

  40  restoIf : ELSE $$12 cmd
  41          |

  42  exp : NUM
  43      | TRUE
  44      | FALSE
  45      | ID
  46      | '(' exp ')'
  47      | '!' exp
  48      | lval '=' exp
  49      | lval PLUSEQ exp
  50      | INC lval
  51      | DEC lval
  52      | lval INC
  53      | lval DEC
  54      | ID '.' ID
  55      | ID '.' ID '=' exp
  56      | ID '.' ID PLUSEQ exp
  57      | ID '[' exp ']'
  58      | ID '[' exp ']' '=' exp
  59      | ID '[' exp ']' PLUSEQ exp

  60  $$13 :

  61  $$14 :

  62  exp : exp '?' $$13 exp ':' $$14 exp
  63      | exp '+' exp
  64      | exp '-' exp
  65      | exp '*' exp
  66      | exp '/' exp
  67      | exp '%' exp
  68      | exp '>' exp
  69      | exp '<' exp
  70      | exp EQ exp
  71      | exp LEQ exp
  72      | exp GEQ exp
  73      | exp NEQ exp
  74      | exp OR exp
  75      | exp AND exp

  76  lval : ID

  77  optInit : exp
  78          |

  79  optCond : exp
  80          |

  81  optIncr : exp
  82          |

state 0
	$accept : . prog $end  (0)
	$$1 : .  (1)

	.  reduce 1

	prog  goto 1
	$$1  goto 2


state 1
	$accept : prog . $end  (0)

	$end  accept


state 2
	prog : $$1 . dList mainF  (2)
	dList : .  (8)

	INT  shift 3
	FLOAT  shift 4
	BOOL  shift 5
	STRUCT  shift 6
	VOID  reduce 8

	type  goto 7
	dList  goto 8
	decl  goto 9
	sDecl  goto 10


state 3
	type : INT .  (16)

	.  reduce 16


state 4
	type : FLOAT .  (17)

	.  reduce 17


state 5
	type : BOOL .  (18)

	.  reduce 18


state 6
	decl : STRUCT . ID ID ';'  (11)
	sDecl : STRUCT . ID '{' $$4 sFields '}' ';'  (13)

	ID  shift 11
	.  error


state 7
	decl : type . ID ';'  (9)
	decl : type . ID '[' NUM ']' ';'  (10)

	ID  shift 12
	.  error


state 8
	prog : $$1 dList . mainF  (2)

	VOID  shift 13
	.  error

	mainF  goto 14


state 9
	dList : decl . dList  (6)
	dList : .  (8)

	INT  shift 3
	FLOAT  shift 4
	BOOL  shift 5
	STRUCT  shift 6
	VOID  reduce 8

	type  goto 7
	dList  goto 15
	decl  goto 9
	sDecl  goto 10


state 10
	dList : sDecl . dList  (7)
	dList : .  (8)

	INT  shift 3
	FLOAT  shift 4
	BOOL  shift 5
	STRUCT  shift 6
	VOID  reduce 8

	type  goto 7
	dList  goto 16
	decl  goto 9
	sDecl  goto 10


state 11
	decl : STRUCT ID . ID ';'  (11)
	sDecl : STRUCT ID . '{' $$4 sFields '}' ';'  (13)

	ID  shift 17
	'{'  shift 18
	.  error


state 12
	decl : type ID . ';'  (9)
	decl : type ID . '[' NUM ']' ';'  (10)

	';'  shift 19
	'['  shift 20
	.  error


state 13
	mainF : VOID . MAIN '(' ')' $$2 '{' lcmd $$3 '}'  (5)

	MAIN  shift 21
	.  error


state 14
	prog : $$1 dList mainF .  (2)

	.  reduce 2


state 15
	dList : decl dList .  (6)

	.  reduce 6


state 16
	dList : sDecl dList .  (7)

	.  reduce 7


state 17
	decl : STRUCT ID ID . ';'  (11)

	';'  shift 22
	.  error


state 18
	sDecl : STRUCT ID '{' . $$4 sFields '}' ';'  (13)
	$$4 : .  (12)

	.  reduce 12

	$$4  goto 23


state 19
	decl : type ID ';' .  (9)

	.  reduce 9


state 20
	decl : type ID '[' . NUM ']' ';'  (10)

	NUM  shift 24
	.  error


state 21
	mainF : VOID MAIN . '(' ')' $$2 '{' lcmd $$3 '}'  (5)

	'('  shift 25
	.  error


state 22
	decl : STRUCT ID ID ';' .  (11)

	.  reduce 11


state 23
	sDecl : STRUCT ID '{' $$4 . sFields '}' ';'  (13)
	sFields : .  (15)

	.  reduce 15

	sFields  goto 26


state 24
	decl : type ID '[' NUM . ']' ';'  (10)

	']'  shift 27
	.  error


state 25
	mainF : VOID MAIN '(' . ')' $$2 '{' lcmd $$3 '}'  (5)

	')'  shift 28
	.  error


state 26
	sDecl : STRUCT ID '{' $$4 sFields . '}' ';'  (13)
	sFields : sFields . INT ID ';'  (14)

	INT  shift 29
	'}'  shift 30
	.  error


state 27
	decl : type ID '[' NUM ']' . ';'  (10)

	';'  shift 31
	.  error


state 28
	mainF : VOID MAIN '(' ')' . $$2 '{' lcmd $$3 '}'  (5)
	$$2 : .  (3)

	.  reduce 3

	$$2  goto 32


state 29
	sFields : sFields INT . ID ';'  (14)

	ID  shift 33
	.  error


state 30
	sDecl : STRUCT ID '{' $$4 sFields '}' . ';'  (13)

	';'  shift 34
	.  error


state 31
	decl : type ID '[' NUM ']' ';' .  (10)

	.  reduce 10


state 32
	mainF : VOID MAIN '(' ')' $$2 . '{' lcmd $$3 '}'  (5)

	'{'  shift 35
	.  error


state 33
	sFields : sFields INT ID . ';'  (14)

	';'  shift 36
	.  error


state 34
	sDecl : STRUCT ID '{' $$4 sFields '}' ';' .  (13)

	.  reduce 13


state 35
	mainF : VOID MAIN '(' ')' $$2 '{' . lcmd $$3 '}'  (5)
	lcmd : .  (20)

	.  reduce 20

	lcmd  goto 37


state 36
	sFields : sFields INT ID ';' .  (14)

	.  reduce 14


state 37
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd . $$3 '}'  (5)
	lcmd : lcmd . cmd  (19)
	$$3 : .  (4)

	ID  shift 38
	NUM  shift 39
	READ  shift 40
	WRITE  shift 41
	IF  shift 42
	WHILE  shift 43
	TRUE  shift 44
	FALSE  shift 45
	DO  shift 46
	FOR  shift 47
	BREAK  shift 48
	CONTINUE  shift 49
	INC  shift 50
	DEC  shift 51
	'!'  shift 52
	'('  shift 53
	'{'  shift 54
	'}'  reduce 4

	lval  goto 55
	$$3  goto 56
	cmd  goto 57
	exp  goto 58


state 38
	exp : ID .  (45)
	exp : ID . '.' ID  (54)
	exp : ID . '.' ID '=' exp  (55)
	exp : ID . '.' ID PLUSEQ exp  (56)
	exp : ID . '[' exp ']'  (57)
	exp : ID . '[' exp ']' '=' exp  (58)
	exp : ID . '[' exp ']' PLUSEQ exp  (59)
	lval : ID .  (76)

	'['  shift 59
	'.'  shift 60
	EQ  reduce 45
	LEQ  reduce 45
	GEQ  reduce 45
	NEQ  reduce 45
	AND  reduce 45
	OR  reduce 45
	INC  reduce 76
	DEC  reduce 76
	PLUSEQ  reduce 76
	'='  reduce 76
	'?'  reduce 45
	':'  reduce 45
	'>'  reduce 45
	'<'  reduce 45
	'+'  reduce 45
	'-'  reduce 45
	'*'  reduce 45
	'/'  reduce 45
	'%'  reduce 45
	')'  reduce 45
	';'  reduce 45
	']'  reduce 45


state 39
	exp : NUM .  (42)

	.  reduce 42


state 40
	cmd : READ . '(' ID ')' ';'  (26)

	'('  shift 61
	.  error


state 41
	cmd : WRITE . '(' LIT ')' ';'  (23)
	cmd : WRITE . '(' LIT $$5 ',' exp ')' ';'  (25)

	'('  shift 62
	.  error


state 42
	cmd : IF . '(' exp $$11 ')' cmd restoIf  (38)

	'('  shift 63
	.  error


state 43
	cmd : WHILE . $$6 '(' exp ')' $$7 cmd  (29)
	$$6 : .  (27)

	.  reduce 27

	$$6  goto 64


state 44
	exp : TRUE .  (43)

	.  reduce 43


state 45
	exp : FALSE .  (44)

	.  reduce 44


state 46
	cmd : DO . $$8 cmd WHILE '(' exp ')' ';'  (31)
	$$8 : .  (30)

	.  reduce 30

	$$8  goto 65


state 47
	cmd : FOR . '(' optInit ';' optCond ';' optIncr ')' $$9 cmd $$10  (34)

	'('  shift 66
	.  error


state 48
	cmd : BREAK . ';'  (35)

	';'  shift 67
	.  error


state 49
	cmd : CONTINUE . ';'  (36)

	';'  shift 68
	.  error


state 50
	exp : INC . lval  (50)

	ID  shift 69
	.  error

	lval  goto 70


state 51
	exp : DEC . lval  (51)

	ID  shift 69
	.  error

	lval  goto 71


state 52
	exp : '!' . exp  (47)

	ID  shift 38
	NUM  shift 39
	TRUE  shift 44
	FALSE  shift 45
	INC  shift 50
	DEC  shift 51
	'!'  shift 52
	'('  shift 53
	.  error

	lval  goto 55
	exp  goto 72


state 53
	exp : '(' . exp ')'  (46)

	ID  shift 38
	NUM  shift 39
	TRUE  shift 44
	FALSE  shift 45
	INC  shift 50
	DEC  shift 51
	'!'  shift 52
	'('  shift 53
	.  error

	lval  goto 55
	exp  goto 73


state 54
	cmd : '{' . lcmd '}'  (22)
	lcmd : .  (20)

	.  reduce 20

	lcmd  goto 74


state 55
	exp : lval . '=' exp  (48)
	exp : lval . PLUSEQ exp  (49)
	exp : lval . INC  (52)
	exp : lval . DEC  (53)

	INC  shift 75
	DEC  shift 76
	PLUSEQ  shift 77
	'='  shift 78
	.  error


state 56
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 . '}'  (5)

	'}'  shift 79
	.  error


state 57
	lcmd : lcmd cmd .  (19)

	.  reduce 19


state 58
	cmd : exp . ';'  (21)
	exp : exp . '?' $$13 exp ':' $$14 exp  (62)
	exp : exp . '+' exp  (63)
	exp : exp . '-' exp  (64)
	exp : exp . '*' exp  (65)
	exp : exp . '/' exp  (66)
	exp : exp . '%' exp  (67)
	exp : exp . '>' exp  (68)
	exp : exp . '<' exp  (69)
	exp : exp . EQ exp  (70)
	exp : exp . LEQ exp  (71)
	exp : exp . GEQ exp  (72)
	exp : exp . NEQ exp  (73)
	exp : exp . OR exp  (74)
	exp : exp . AND exp  (75)

	EQ  shift 80
	LEQ  shift 81
	GEQ  shift 82
	NEQ  shift 83
	AND  shift 84
	OR  shift 85
	'?'  shift 86
	'>'  shift 87
	'<'  shift 88
	'+'  shift 89
	'-'  shift 90
	'*'  shift 91
	'/'  shift 92
	'%'  shift 93
	';'  shift 94
	.  error


state 59
	exp : ID '[' . exp ']'  (57)
	exp : ID '[' . exp ']' '=' exp  (58)
	exp : ID '[' . exp ']' PLUSEQ exp  (59)

	ID  shift 38
	NUM  shift 39
	TRUE  shift 44
	FALSE  shift 45
	INC  shift 50
	DEC  shift 51
	'!'  shift 52
	'('  shift 53
	.  error

	lval  goto 55
	exp  goto 95


state 60
	exp : ID '.' . ID  (54)
	exp : ID '.' . ID '=' exp  (55)
	exp : ID '.' . ID PLUSEQ exp  (56)

	ID  shift 96
	.  error


state 61
	cmd : READ '(' . ID ')' ';'  (26)

	ID  shift 97
	.  error


state 62
	cmd : WRITE '(' . LIT ')' ';'  (23)
	cmd : WRITE '(' . LIT $$5 ',' exp ')' ';'  (25)

	LIT  shift 98
	.  error


state 63
	cmd : IF '(' . exp $$11 ')' cmd restoIf  (38)

	ID  shift 38
	NUM  shift 39
	TRUE  shift 44
	FALSE  shift 45
	INC  shift 50
	DEC  shift 51
	'!'  shift 52
	'('  shift 53
	.  error

	lval  goto 55
	exp  goto 99


state 64
	cmd : WHILE $$6 . '(' exp ')' $$7 cmd  (29)

	'('  shift 100
	.  error


state 65
	cmd : DO $$8 . cmd WHILE '(' exp ')' ';'  (31)

	ID  shift 38
	NUM  shift 39
	READ  shift 40
	WRITE  shift 41
	IF  shift 42
	WHILE  shift 43
	TRUE  shift 44
	FALSE  shift 45
	DO  shift 46
	FOR  shift 47
	BREAK  shift 48
	CONTINUE  shift 49
	INC  shift 50
	DEC  shift 51
	'!'  shift 52
	'('  shift 53
	'{'  shift 54
	.  error

	lval  goto 55
	cmd  goto 101
	exp  goto 58


state 66
	cmd : FOR '(' . optInit ';' optCond ';' optIncr ')' $$9 cmd $$10  (34)
	optInit : .  (78)

	ID  shift 38
	NUM  shift 39
	TRUE  shift 44
	FALSE  shift 45
	INC  shift 50
	DEC  shift 51
	'!'  shift 52
	'('  shift 53
	';'  reduce 78

	lval  goto 55
	exp  goto 102
	optInit  goto 103


state 67
	cmd : BREAK ';' .  (35)

	.  reduce 35


state 68
	cmd : CONTINUE ';' .  (36)

	.  reduce 36


state 69
	lval : ID .  (76)

	.  reduce 76


state 70
	exp : INC lval .  (50)

	.  reduce 50


state 71
	exp : DEC lval .  (51)

	.  reduce 51


state 72
	exp : '!' exp .  (47)
	exp : exp . '?' $$13 exp ':' $$14 exp  (62)
	exp : exp . '+' exp  (63)
	exp : exp . '-' exp  (64)
	exp : exp . '*' exp  (65)
	exp : exp . '/' exp  (66)
	exp : exp . '%' exp  (67)
	exp : exp . '>' exp  (68)
	exp : exp . '<' exp  (69)
	exp : exp . EQ exp  (70)
	exp : exp . LEQ exp  (71)
	exp : exp . GEQ exp  (72)
	exp : exp . NEQ exp  (73)
	exp : exp . OR exp  (74)
	exp : exp . AND exp  (75)

	.  reduce 47


state 73
	exp : '(' exp . ')'  (46)
	exp : exp . '?' $$13 exp ':' $$14 exp  (62)
	exp : exp . '+' exp  (63)
	exp : exp . '-' exp  (64)
	exp : exp . '*' exp  (65)
	exp : exp . '/' exp  (66)
	exp : exp . '%' exp  (67)
	exp : exp . '>' exp  (68)
	exp : exp . '<' exp  (69)
	exp : exp . EQ exp  (70)
	exp : exp . LEQ exp  (71)
	exp : exp . GEQ exp  (72)
	exp : exp . NEQ exp  (73)
	exp : exp . OR exp  (74)
	exp : exp . AND exp  (75)

	EQ  shift 80
	LEQ  shift 81
	GEQ  shift 82
	NEQ  shift 83
	AND  shift 84
	OR  shift 85
	'?'  shift 86
	'>'  shift 87
	'<'  shift 88
	'+'  shift 89
	'-'  shift 90
	'*'  shift 91
	'/'  shift 92
	'%'  shift 93
	')'  shift 104
	.  error


state 74
	lcmd : lcmd . cmd  (19)
	cmd : '{' lcmd . '}'  (22)

	ID  shift 38
	NUM  shift 39
	READ  shift 40
	WRITE  shift 41
	IF  shift 42
	WHILE  shift 43
	TRUE  shift 44
	FALSE  shift 45
	DO  shift 46
	FOR  shift 47
	BREAK  shift 48
	CONTINUE  shift 49
	INC  shift 50
	DEC  shift 51
	'!'  shift 52
	'('  shift 53
	'{'  shift 54
	'}'  shift 105
	.  error

	lval  goto 55
	cmd  goto 57
	exp  goto 58


state 75
	exp : lval INC .  (52)

	.  reduce 52


state 76
	exp : lval DEC .  (53)

	.  reduce 53


state 77
	exp : lval PLUSEQ . exp  (49)

	ID  shift 38
	NUM  shift 39
	TRUE  shift 44
	FALSE  shift 45
	INC  shift 50
	DEC  shift 51
	'!'  shift 52
	'('  shift 53
	.  error

	lval  goto 55
	exp  goto 106


state 78
	exp : lval '=' . exp  (48)

	ID  shift 38
	NUM  shift 39
	TRUE  shift 44
	FALSE  shift 45
	INC  shift 50
	DEC  shift 51
	'!'  shift 52
	'('  shift 53
	.  error

	lval  goto 55
	exp  goto 107


state 79
	mainF : VOID MAIN '(' ')' $$2 '{' lcmd $$3 '}' .  (5)

	.  reduce 5


state 80
	exp : exp EQ . exp  (70)

	ID  shift 38
	NUM  shift 39
	TRUE  shift 44
	FALSE  shift 45
	INC  shift 50
	DEC  shift 51
	'!'  shift 52
	'('  shift 53
	.  error

	lval  goto 55
	exp  goto 108


state 81
	exp : exp LEQ . exp  (71)

	ID  shift 38
	NUM  shift 39
	TRUE  shift 44
	FALSE  shift 45
	INC  shift 50
	DEC  shift 51
	'!'  shift 52
	'('  shift 53
	.  error

	lval  goto 55
	exp  goto 109


state 82
	exp : exp GEQ . exp  (72)

	ID  shift 38
	NUM  shift 39
	TRUE  shift 44
	FALSE  shift 45
	INC  shift 50
	DEC  shift 51
	'!'  shift 52
	'('  shift 53
	.  error

	lval  goto 55
	exp  goto 110


state 83
	exp : exp NEQ . exp  (73)

	ID  shift 38
	NUM  shift 39
	TRUE  shift 44
	FALSE  shift 45
	INC  shift 50
	DEC  shift 51
	'!'  shift 52
	'('  shift 53
	.  error

	lval  goto 55
	exp  goto 111


state 84
	exp : exp AND . exp  (75)

	ID  shift 38
	NUM  shift 39
	TRUE  shift 44
	FALSE  shift 45
	INC  shift 50
	DEC  shift 51
	'!'  shift 52
	'('  shift 53
	.  error

	lval  goto 55
	exp  goto 112


state 85
	exp : exp OR . exp  (74)

	ID  shift 38
	NUM  shift 39
	TRUE  shift 44
	FALSE  shift 45
	INC  shift 50
	DEC  shift 51
	'!'  shift 52
	'('  shift 53
	.  error

	lval  goto 55
	exp  goto 113


state 86
	exp : exp '?' . $$13 exp ':' $$14 exp  (62)
	$$13 : .  (60)

	.  reduce 60

	$$13  goto 114


state 87
	exp : exp '>' . exp  (68)

	ID  shift 38
	NUM  shift 39
	TRUE  shift 44
	FALSE  shift 45
	INC  shift 50
	DEC  shift 51
	'!'  shift 52
	'('  shift 53
	.  error

	lval  goto 55
	exp  goto 115


state 88
	exp : exp '<' . exp  (69)

	ID  shift 38
	NUM  shift 39
	TRUE  shift 44
	FALSE  shift 45
	INC  shift 50
	DEC  shift 51
	'!'  shift 52
	'('  shift 53
	.  error

	lval  goto 55
	exp  goto 116


state 89
	exp : exp '+' . exp  (63)

	ID  shift 38
	NUM  shift 39
	TRUE  shift 44
	FALSE  shift 45
	INC  shift 50
	DEC  shift 51
	'!'  shift 52
	'('  shift 53
	.  error

	lval  goto 55
	exp  goto 117


state 90
	exp : exp '-' . exp  (64)

	ID  shift 38
	NUM  shift 39
	TRUE  shift 44
	FALSE  shift 45
	INC  shift 50
	DEC  shift 51
	'!'  shift 52
	'('  shift 53
	.  error

	lval  goto 55
	exp  goto 118


state 91
	exp : exp '*' . exp  (65)

	ID  shift 38
	NUM  shift 39
	TRUE  shift 44
	FALSE  shift 45
	INC  shift 50
	DEC  shift 51
	'!'  shift 52
	'('  shift 53
	.  error

	lval  goto 55
	exp  goto 119


state 92
	exp : exp '/' . exp  (66)

	ID  shift 38
	NUM  shift 39
	TRUE  shift 44
	FALSE  shift 45
	INC  shift 50
	DEC  shift 51
	'!'  shift 52
	'('  shift 53
	.  error

	lval  goto 55
	exp  goto 120


state 93
	exp : exp '%' . exp  (67)

	ID  shift 38
	NUM  shift 39
	TRUE  shift 44
	FALSE  shift 45
	INC  shift 50
	DEC  shift 51
	'!'  shift 52
	'('  shift 53
	.  error

	lval  goto 55
	exp  goto 121


state 94
	cmd : exp ';' .  (21)

	.  reduce 21


state 95
	exp : ID '[' exp . ']'  (57)
	exp : ID '[' exp . ']' '=' exp  (58)
	exp : ID '[' exp . ']' PLUSEQ exp  (59)
	exp : exp . '?' $$13 exp ':' $$14 exp  (62)
	exp : exp . '+' exp  (63)
	exp : exp . '-' exp  (64)
	exp : exp . '*' exp  (65)
	exp : exp . '/' exp  (66)
	exp : exp . '%' exp  (67)
	exp : exp . '>' exp  (68)
	exp : exp . '<' exp  (69)
	exp : exp . EQ exp  (70)
	exp : exp . LEQ exp  (71)
	exp : exp . GEQ exp  (72)
	exp : exp . NEQ exp  (73)
	exp : exp . OR exp  (74)
	exp : exp . AND exp  (75)

	EQ  shift 80
	LEQ  shift 81
	GEQ  shift 82
	NEQ  shift 83
	AND  shift 84
	OR  shift 85
	'?'  shift 86
	'>'  shift 87
	'<'  shift 88
	'+'  shift 89
	'-'  shift 90
	'*'  shift 91
	'/'  shift 92
	'%'  shift 93
	']'  shift 122
	.  error


state 96
	exp : ID '.' ID .  (54)
	exp : ID '.' ID . '=' exp  (55)
	exp : ID '.' ID . PLUSEQ exp  (56)

	PLUSEQ  shift 123
	'='  shift 124
	EQ  reduce 54
	LEQ  reduce 54
	GEQ  reduce 54
	NEQ  reduce 54
	AND  reduce 54
	OR  reduce 54
	'?'  reduce 54
	':'  reduce 54
	'>'  reduce 54
	'<'  reduce 54
	'+'  reduce 54
	'-'  reduce 54
	'*'  reduce 54
	'/'  reduce 54
	'%'  reduce 54
	')'  reduce 54
	';'  reduce 54
	']'  reduce 54


state 97
	cmd : READ '(' ID . ')' ';'  (26)

	')'  shift 125
	.  error


state 98
	cmd : WRITE '(' LIT . ')' ';'  (23)
	cmd : WRITE '(' LIT . $$5 ',' exp ')' ';'  (25)
	$$5 : .  (24)

	')'  shift 126
	','  reduce 24

	$$5  goto 127


state 99
	cmd : IF '(' exp . $$11 ')' cmd restoIf  (38)
	exp : exp . '?' $$13 exp ':' $$14 exp  (62)
	exp : exp . '+' exp  (63)
	exp : exp . '-' exp  (64)
	exp : exp . '*' exp  (65)
	exp : exp . '/' exp  (66)
	exp : exp . '%' exp  (67)
	exp : exp . '>' exp  (68)
	exp : exp . '<' exp  (69)
	exp : exp . EQ exp  (70)
	exp : exp . LEQ exp  (71)
	exp : exp . GEQ exp  (72)
	exp : exp . NEQ exp  (73)
	exp : exp . OR exp  (74)
	exp : exp . AND exp  (75)
	$$11 : .  (37)

	EQ  shift 80
	LEQ  shift 81
	GEQ  shift 82
	NEQ  shift 83
	AND  shift 84
	OR  shift 85
	'?'  shift 86
	'>'  shift 87
	'<'  shift 88
	'+'  shift 89
	'-'  shift 90
	'*'  shift 91
	'/'  shift 92
	'%'  shift 93
	')'  reduce 37

	$$11  goto 128


state 100
	cmd : WHILE $$6 '(' . exp ')' $$7 cmd  (29)

	ID  shift 38
	NUM  shift 39
	TRUE  shift 44
	FALSE  shift 45
	INC  shift 50
	DEC  shift 51
	'!'  shift 52
	'('  shift 53
	.  error

	lval  goto 55
	exp  goto 129


state 101
	cmd : DO $$8 cmd . WHILE '(' exp ')' ';'  (31)

	WHILE  shift 130
	.  error


state 102
	exp : exp . '?' $$13 exp ':' $$14 exp  (62)
	exp : exp . '+' exp  (63)
	exp : exp . '-' exp  (64)
	exp : exp . '*' exp  (65)
	exp : exp . '/' exp  (66)
	exp : exp . '%' exp  (67)
	exp : exp . '>' exp  (68)
	exp : exp . '<' exp  (69)
	exp : exp . EQ exp  (70)
	exp : exp . LEQ exp  (71)
	exp : exp . GEQ exp  (72)
	exp : exp . NEQ exp  (73)
	exp : exp . OR exp  (74)
	exp : exp . AND exp  (75)
	optInit : exp .  (77)

	EQ  shift 80
	LEQ  shift 81
	GEQ  shift 82
	NEQ  shift 83
	AND  shift 84
	OR  shift 85
	'?'  shift 86
	'>'  shift 87
	'<'  shift 88
	'+'  shift 89
	'-'  shift 90
	'*'  shift 91
	'/'  shift 92
	'%'  shift 93
	';'  reduce 77


state 103
	cmd : FOR '(' optInit . ';' optCond ';' optIncr ')' $$9 cmd $$10  (34)

	';'  shift 131
	.  error


state 104
	exp : '(' exp ')' .  (46)

	.  reduce 46


state 105
	cmd : '{' lcmd '}' .  (22)

	.  reduce 22


106: shift/reduce conflict (shift 80, reduce 49) on EQ
106: shift/reduce conflict (shift 81, reduce 49) on LEQ
106: shift/reduce conflict (shift 82, reduce 49) on GEQ
106: shift/reduce conflict (shift 83, reduce 49) on NEQ
106: shift/reduce conflict (shift 84, reduce 49) on AND
106: shift/reduce conflict (shift 85, reduce 49) on OR
106: shift/reduce conflict (shift 86, reduce 49) on '?'
106: shift/reduce conflict (shift 87, reduce 49) on '>'
106: shift/reduce conflict (shift 88, reduce 49) on '<'
106: shift/reduce conflict (shift 89, reduce 49) on '+'
106: shift/reduce conflict (shift 90, reduce 49) on '-'
106: shift/reduce conflict (shift 91, reduce 49) on '*'
106: shift/reduce conflict (shift 92, reduce 49) on '/'
106: shift/reduce conflict (shift 93, reduce 49) on '%'
state 106
	exp : lval PLUSEQ exp .  (49)
	exp : exp . '?' $$13 exp ':' $$14 exp  (62)
	exp : exp . '+' exp  (63)
	exp : exp . '-' exp  (64)
	exp : exp . '*' exp  (65)
	exp : exp . '/' exp  (66)
	exp : exp . '%' exp  (67)
	exp : exp . '>' exp  (68)
	exp : exp . '<' exp  (69)
	exp : exp . EQ exp  (70)
	exp : exp . LEQ exp  (71)
	exp : exp . GEQ exp  (72)
	exp : exp . NEQ exp  (73)
	exp : exp . OR exp  (74)
	exp : exp . AND exp  (75)

	EQ  shift 80
	LEQ  shift 81
	GEQ  shift 82
	NEQ  shift 83
	AND  shift 84
	OR  shift 85
	'?'  shift 86
	'>'  shift 87
	'<'  shift 88
	'+'  shift 89
	'-'  shift 90
	'*'  shift 91
	'/'  shift 92
	'%'  shift 93
	':'  reduce 49
	')'  reduce 49
	';'  reduce 49
	']'  reduce 49


state 107
	exp : lval '=' exp .  (48)
	exp : exp . '?' $$13 exp ':' $$14 exp  (62)
	exp : exp . '+' exp  (63)
	exp : exp . '-' exp  (64)
	exp : exp . '*' exp  (65)
	exp : exp . '/' exp  (66)
	exp : exp . '%' exp  (67)
	exp : exp . '>' exp  (68)
	exp : exp . '<' exp  (69)
	exp : exp . EQ exp  (70)
	exp : exp . LEQ exp  (71)
	exp : exp . GEQ exp  (72)
	exp : exp . NEQ exp  (73)
	exp : exp . OR exp  (74)
	exp : exp . AND exp  (75)

	EQ  shift 80
	LEQ  shift 81
	GEQ  shift 82
	NEQ  shift 83
	AND  shift 84
	OR  shift 85
	'?'  shift 86
	'>'  shift 87
	'<'  shift 88
	'+'  shift 89
	'-'  shift 90
	'*'  shift 91
	'/'  shift 92
	'%'  shift 93
	':'  reduce 48
	')'  reduce 48
	';'  reduce 48
	']'  reduce 48


state 108
	exp : exp . '?' $$13 exp ':' $$14 exp  (62)
	exp : exp . '+' exp  (63)
	exp : exp . '-' exp  (64)
	exp : exp . '*' exp  (65)
	exp : exp . '/' exp  (66)
	exp : exp . '%' exp  (67)
	exp : exp . '>' exp  (68)
	exp : exp . '<' exp  (69)
	exp : exp . EQ exp  (70)
	exp : exp EQ exp .  (70)
	exp : exp . LEQ exp  (71)
	exp : exp . GEQ exp  (72)
	exp : exp . NEQ exp  (73)
	exp : exp . OR exp  (74)
	exp : exp . AND exp  (75)

	'+'  shift 89
	'-'  shift 90
	'*'  shift 91
	'/'  shift 92
	'%'  shift 93
	EQ  reduce 70
	LEQ  reduce 70
	GEQ  reduce 70
	NEQ  reduce 70
	AND  reduce 70
	OR  reduce 70
	'?'  reduce 70
	':'  reduce 70
	'>'  reduce 70
	'<'  reduce 70
	')'  reduce 70
	';'  reduce 70
	']'  reduce 70


state 109
	exp : exp . '?' $$13 exp ':' $$14 exp  (62)
	exp : exp . '+' exp  (63)
	exp : exp . '-' exp  (64)
	exp : exp . '*' exp  (65)
	exp : exp . '/' exp  (66)
	exp : exp . '%' exp  (67)
	exp : exp . '>' exp  (68)
	exp : exp . '<' exp  (69)
	exp : exp . EQ exp  (70)
	exp : exp . LEQ exp  (71)
	exp : exp LEQ exp .  (71)
	exp : exp . GEQ exp  (72)
	exp : exp . NEQ exp  (73)
	exp : exp . OR exp  (74)
	exp : exp . AND exp  (75)

	'+'  shift 89
	'-'  shift 90
	'*'  shift 91
	'/'  shift 92
	'%'  shift 93
	EQ  reduce 71
	LEQ  reduce 71
	GEQ  reduce 71
	NEQ  reduce 71
	AND  reduce 71
	OR  reduce 71
	'?'  reduce 71
	':'  reduce 71
	'>'  reduce 71
	'<'  reduce 71
	')'  reduce 71
	';'  reduce 71
	']'  reduce 71


state 110
	exp : exp . '?' $$13 exp ':' $$14 exp  (62)
	exp : exp . '+' exp  (63)
	exp : exp . '-' exp  (64)
	exp : exp . '*' exp  (65)
	exp : exp . '/' exp  (66)
	exp : exp . '%' exp  (67)
	exp : exp . '>' exp  (68)
	exp : exp . '<' exp  (69)
	exp : exp . EQ exp  (70)
	exp : exp . LEQ exp  (71)
	exp : exp . GEQ exp  (72)
	exp : exp GEQ exp .  (72)
	exp : exp . NEQ exp  (73)
	exp : exp . OR exp  (74)
	exp : exp . AND exp  (75)

	'+'  shift 89
	'-'  shift 90
	'*'  shift 91
	'/'  shift 92
	'%'  shift 93
	EQ  reduce 72
	LEQ  reduce 72
	GEQ  reduce 72
	NEQ  reduce 72
	AND  reduce 72
	OR  reduce 72
	'?'  reduce 72
	':'  reduce 72
	'>'  reduce 72
	'<'  reduce 72
	')'  reduce 72
	';'  reduce 72
	']'  reduce 72

